fix: lang change (shift problem)

--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ body {
        -moz-box-shadow: 3px 3px 4px 1px rgba(0,0,0,0.7);
             box-shadow: 3px 3px 4px 1px rgba(0,0,0,0.7);
 }
+.info {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
 
 @media (hover:hover) {
     .keyboard__key:hover {
